Bug 1044074 - Don't run resize or scroll events while documents have events suppressed, r=smaug.