dom/base/nsDocument.cpp
@@ -1320,6 +1320,7 @@ nsIDocument::nsIDocument()
 #ifdef DEBUG
       mWillReparent(false),
 #endif
+      mHasDelayedRefreshEvent(false),
       mPendingFullscreenRequests(0),
       mXMLDeclarationBits(0),
       mOnloadBlockCount(0),
@@ -8588,6 +8589,18 @@ void nsIDocument::UnsuppressEventHandlingAndFireEvents(bool aFireEvents) {
     mSuspendedQueues.SwapElements(queues);
     for (net::ChannelEventQueue* queue : queues) {
       queue->Resume();
+    }
+
+    // If there have been any events driven by the refresh driver which were
+    // delayed due to events being suppressed in this document, make sure there
+    // is a refresh scheduled soon so the events will run.
+    if (mHasDelayedRefreshEvent) {
+      mHasDelayedRefreshEvent = false;
+
+      if (mPresShell) {
+        nsRefreshDriver* rd = mPresShell->GetPresContext()->RefreshDriver();
+        rd->RunDelayedEventsSoon();
+      }
     }
   }
 }
